[package]
name = "rasp-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server0"
path = "src/bin/server0.rs"

[target.armv7-unknown-linux-musleabihf]
linker = "arm-linux-gnueabihf-ld"

[dependencies]
actix-web = "4"