[package]
name = "rasp-others"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[dependencies]