[package]
name = "rasp01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "actix_server"
path = "src/bin/actix_server.rs"

[dependencies]
actix-web = "4"