[package]
name = "webserver3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "sync_server"
path = "src/bin/sync_server.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }